--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,7 @@ verify_ssl = true
 [packages]
 Django = "==3.0.2"
 django-multiselectfield = "*"
+djangorestframework = "*"
 
 [requires]
 python_version = "3.7"
